--- a/doc.ipynb
+++ b/doc.ipynb
@@ -95,7 +95,7 @@
                                         "    app.conf.task_routes = {'newapp.tasks.task1': {queue,}\n",
                                         "    app.conf.task_routes = {'<#task location>': {queue'<queueme>'},}\n",
                                         "\n",
-                                        "3) if there is a independed worker we have to import task using this command\n",
+                                        "3) if there is a independed worker we have to creat a task.py file and write tasks in there and import task using this command\n",
                                         "    app.conf.imports = ('newapp.tasks')\n",
                                         "    app.conf.imports = ('<#task location>')\n",
                                         "    +\n",
