--- a/doc.ipynb
+++ b/doc.ipynb
@@ -11,9 +11,21 @@
                               "cell_type": "markdown",
                               "metadata": {},
                               "source": [
-                                        "1) add celery.py to the main app\n",
-                                        "2) add this to setting.py  CELERY_BROKER_URL = os.getenv(\"CELERY_BROKER_URL\", \"redis://redis:6379/0\")\n",
-                                        "3) add tasks.py to your app and use @shared_task decorator to define it as a task   "
+                                        "1) add <font color='yellow'>celery.py</font> to the main app and add these lines\n",
+                                        "<font color='deepskyblue'>\n",
+                                        "> from celery import Celery\n",
+                                        "\n",
+                                        "> os.environ.setdefault(\"DJANGO_SETTINGS_MODULE\", \"celerytst.settings\")\n",
+                                        "\n",
+                                        "> app.config_from_object(\"django.conf:settings\", namespace=\"CELERY\")\n",
+                                        "\n",
+                                        "> app.autodiscover_tasks()\n",
+                                        "</font>\n",
+                                        "2) add this to setting.py  \n",
+                                        "<font color='deepskyblue'>\n",
+                                        "> CELERY_BROKER_URL = os.getenv(\"CELERY_BROKER_URL\", \"redis://redis:6379/0\")\n",
+                                        "</font>\n",
+                                        "3) add <font color='yellow'>tasks.py</font> to your app and use <font color='yellow'>@shared_task</font> decorator to define it as a task   "
                               ]
                     },
                     {
@@ -28,18 +40,25 @@
                               "metadata": {},
                               "source": [
                                         "1) make a new directory next to yor project dir \n",
-                                        "2) add a celerytask.py and celeryconfig.py to it\n",
-                                        "3) add Dockerfile and requirement.txt if you want to build it seperately\n",
-                                        "4) in celerytask.py make a new celery instance and choose celeryconfig as a setting file \n",
-                                        "    app = Celery('mytask')\n",
-                                        "    app.config_from_object('celeryconfig')\n",
-                                        "    @app.task\n",
-                                        "    def your_task():\n",
-                                        "        return\n",
+                                        "2) add a <font color='yellow'>celerytask.py</font> and <font color='yellow'>celeryconfig.py</font> to it\n",
+                                        "3) add <font color='yellow'>Dockerfile</font> and <font color='yellow'>requirement.txt</font> if you want to build it seperately\n",
+                                        "4) in <font color='yellow'>celerytask.py</font> make a new celery instance and choose celeryconfig as a setting file \n",
+                                        "<font color='deepskyblue'>\n",
+                                        "    > app = Celery('mytask')\n",
+                                        "    \n",
+                                        "    > app.config_from_object('celeryconfig')\n",
+                                        "    \n",
+                                        "    > @app.task\n",
+                                        "\n",
+                                        "    > def your_task():\n",
+                                        "    >   return\n",
+                                        "</font>\n",
                                         "\n",
                                         "5) add congifs to the celeryconfig.py\n",
-                                        "    broker_url = 'redis://redis:6379/0'\n",
-                                        "    result_backend = 'redis://redis:6379/0'\n",
+                                        "<font color='deepskyblue'>\n",
+                                        "    > broker_url = 'redis://redis:6379/0'\n",
+                                        "    > result_backend = 'redis://redis:6379/0'\n",
+                                        "</font>\n",
                                         "\n",
                                         "6) add a service using this directory to the docker compose file"
                               ]
@@ -60,12 +79,12 @@
                                         "'''-------------- celery@44b015f2d5cf v5.5.1 (immunity)\n",
                                         " --- ***** ----- \n",
                                         " -- ******* ---- Linux-6.10.14-linuxkit-x86_64-with-glibc2.36 2025-04-12 06:45:38\n",
-                                        " - *** --- * --- \n",
-                                        " - ** ---------- [config]\n",
-                                        " - ** ---------- .> app:         mytask:0x7f0ddfae1c00\n",
-                                        " - ** ---------- .> transport:   redis://redis:6379/0   -----------------------------------> these two lines must be redis\n",
-                                        " - ** ---------- .> results:     redis://redis:6379/0   -----------------------------------> these two lines must be redis\n",
-                                        " - *** --- * --- .> concurrency: 16 (prefork)\n",
+                                        " --*** --- * --- \n",
+                                        " --** ---------- [config]\n",
+                                        " --** ---------- .> app:         mytask:0x7f0ddfae1c00\n",
+                                        " --** ---------- .> transport:   redis://redis:6379/0   -----------------------------------> these two lines must be redis\n",
+                                        " --** ---------- .> results:     redis://redis:6379/0   -----------------------------------> these two lines must be redis\n",
+                                        " --*** --- * --- .> concurrency: 16 (prefork)\n",
                                         " -- ******* ---- .> task events: OFF (enable -E to monitor tasks in this worker)\n",
                                         " --- ***** ----- \n",
                                         "  -------------- [queues]\n",
@@ -80,7 +99,7 @@
                               "cell_type": "markdown",
                               "metadata": {},
                               "source": [
-                                        "# workers routing"
+                                        "# Workers routing"
                               ]
                     },
                     {
@@ -91,17 +110,57 @@
                                         "\n",
                                         "passing to queue:\n",
                                         "\n",
-                                        "1) we use -Q <queueme> flag to set a worker to watch a individuaqueue  celery -A <#filename> worker --loglevel=info -Qqueue2) in order to pass a task to a spicifiedqueuee this command in celery.py\n",
-                                        "    app.conf.task_routes = {'newapp.tasks.task1': {queue,}\n",
-                                        "    app.conf.task_routes = {'<#task location>': {queue'<queueme>'},}\n",
+                                        "1) we use <font color='yellow'>-Q <queuename> flag</font> to set a worker to watch a individuaqueue  <font color='yellow'>celery -A <#filename> worker --loglevel=info -Qqueue2</font> in order to pass a task to a spicifiedqueuee this command in celery.py \n",
+                                        "    <font color='deepskyblue'>\n",
+                                        "    >app.conf.task_routes = {'newapp.tasks.task1': {'queue':'queue1'}}\n",
+                                        "    \n",
+                                        "    >app.conf.task_routes = {'<#task location>': {'queue':'<queuename>'},}\n",
+                                        "    </font> \n",
+                                        "3) if there is a independed worker we have to creat a <font color='yellow'>task.py</font> file and write tasks in there and import task using this command\n",
+                                        "    <font color='deepskyblue'>\n",
+                                        "    >app.conf.imports = ('newapp.tasks')\n",
                                         "\n",
-                                        "3) if there is a independed worker we have to creat a task.py file and write tasks in there and import task using this command\n",
-                                        "    app.conf.imports = ('newapp.tasks')\n",
-                                        "    app.conf.imports = ('<#task location>')\n",
-                                        "    +\n",
-                                        "    app.autodiscover_tasks()\n",
-                                        "\n",
+                                        "    >app.conf.imports = ('<#task location>')\n",
+                                        "    \n",
+                                        "    >app.autodiscover_tasks()\n",
+                                        "    </font>\n",
                                         "\n"
+                              ]
+                    },
+                    {
+                              "cell_type": "markdown",
+                              "metadata": {},
+                              "source": [
+                                        "# Tasks priority"
+                              ]
+                    },
+                    {
+                              "cell_type": "markdown",
+                              "metadata": {},
+                              "source": [
+                                        "in celery prioritazing could be done in two ways:\n",
+                                        "1) set priority to a task\n",
+                                        "2) set priority to a queue and put task in them based on your priority\n",
+                                        "\n",
+                                        "Redis does not support first method and we should use RabitMQ to do that"
+                              ]
+                    },
+                    {
+                              "cell_type": "markdown",
+                              "metadata": {},
+                              "source": [
+                                        "### set priority to a queue\n",
+                                        "\n",
+                                        "1) first set multiple queus for worker in docker-compose \n",
+                                        "> celery -A celerytst worker --loglevel=info -Q queue1,queue2,queue3\n",
+                                        "remember that when passing -Q queus are sorted based on their priority meaning queue1 > queue2 > queue3\n",
+                                        "2) now set each task to a queue using app.conf.task_routes\n",
+                                        "app.conf.task_routes = {\n",
+                                        "    'newapp.tasks.task1': {'queue':'queue1'}, \n",
+                                        "    'newapp.tasks.task2': {'queue':'queue2'},\n",
+                                        "    'newapp.tasks.task3': {'queue':'queue3'},\n",
+                                        "    }\n",
+                                        "3) now task1 is prioritized on task2 and task2 on task3"
                               ]
                     }
           ],
