--- a/doc.ipynb
+++ b/doc.ipynb
@@ -162,6 +162,21 @@
                                         "    }\n",
                                         "3) now task1 is prioritized on task2 and task2 on task3"
                               ]
+                    },
+                    {
+                              "cell_type": "markdown",
+                              "metadata": {},
+                              "source": [
+                                        "# Task groups\n",
+                                        "\n",
+                                        "we use groups to run multiple tasks together in parallel\n",
+                                        "1) first we have to make a group out of tasks with this command\n",
+                                        "> from celery import group\n",
+                                        "> task_group = group(task1.s(), task2.s(),task3.s())\n",
+                                        "2) to execute the task group use\n",
+                                        "> task_group.apply_async()\n",
+                                        "3) now task1,2,3 are executed together\n"
+                              ]
                     }
           ],
           "metadata": {
