--- a/doc.ipynb
+++ b/doc.ipynb
@@ -177,6 +177,21 @@
                                         "> task_group.apply_async()\n",
                                         "3) now task1,2,3 are executed together\n"
                               ]
+                    },
+                    {
+                              "cell_type": "markdown",
+                              "metadata": {},
+                              "source": [
+                                        "# Task chains\n",
+                                        "\n",
+                                        "we use chains to save a sequel between multiple tasks when a task is dependent to another task\n",
+                                        "1) first we make a chain\n",
+                                        "> from celery import chain\n",
+                                        "> task_chain = chain(task1.s(), task2.s(),task3.s())\n",
+                                        "2) to execute the task group use\n",
+                                        "> task_chain.apply_async()\n",
+                                        "3) now task1,2,3 are executed in order"
+                              ]
                     }
           ],
           "metadata": {
