task rate limit

--- a/doc.ipynb
+++ b/doc.ipynb
@@ -192,6 +192,20 @@
                                         "> task_chain.apply_async()\n",
                                         "3) now task1,2,3 are executed in order"
                               ]
+                    },
+                    {
+                              "cell_type": "markdown",
+                              "metadata": {},
+                              "source": [
+                                        "# Task rate limit\n",
+                                        "\n",
+                                        "set a rate limit for a task that manages how many times a task could be executed in a minute \n",
+                                        "1) one way is to use it on @shared_task decorator\n",
+                                        "@shared_task(task_rate_limit= '5/m')\n",
+                                        "2) other way is to use this command in celery.py file\n",
+                                        "app = Celery('proj_name')\n",
+                                        "app.conf.task_default_rate_limit = '5/m'"
+                              ]
                     }
           ],
           "metadata": {
