--- a/doc.ipynb
+++ b/doc.ipynb
@@ -11,8 +11,8 @@
                               "cell_type": "markdown",
                               "metadata": {},
                               "source": [
-                                        "1) add <font color='yellow'>celery.py</font> to the main app and add these lines\n",
-                                        "<font color='deepskyblue'>\n",
+                                        "1) add <font color='goldenrod'>celery.py</font> to the main app and add these lines\n",
+                                        "<font color='dodgerblue'>\n",
                                         "> from celery import Celery\n",
                                         "\n",
                                         "> os.environ.setdefault(\"DJANGO_SETTINGS_MODULE\", \"celerytst.settings\")\n",
@@ -22,10 +22,10 @@
                                         "> app.autodiscover_tasks()\n",
                                         "</font>\n",
                                         "2) add this to setting.py  \n",
-                                        "<font color='deepskyblue'>\n",
+                                        "<font color='dodgerblue'>\n",
                                         "> CELERY_BROKER_URL = os.getenv(\"CELERY_BROKER_URL\", \"redis://redis:6379/0\")\n",
                                         "</font>\n",
-                                        "3) add <font color='yellow'>tasks.py</font> to your app and use <font color='yellow'>@shared_task</font> decorator to define it as a task   "
+                                        "3) add <font color='goldenrod'>tasks.py</font> to your app and use <font color='goldenrod'>@shared_task</font> decorator to define it as a task   "
                               ]
                     },
                     {
@@ -40,10 +40,10 @@
                               "metadata": {},
                               "source": [
                                         "1) make a new directory next to yor project dir \n",
-                                        "2) add a <font color='yellow'>celerytask.py</font> and <font color='yellow'>celeryconfig.py</font> to it\n",
-                                        "3) add <font color='yellow'>Dockerfile</font> and <font color='yellow'>requirement.txt</font> if you want to build it seperately\n",
-                                        "4) in <font color='yellow'>celerytask.py</font> make a new celery instance and choose celeryconfig as a setting file \n",
-                                        "<font color='deepskyblue'>\n",
+                                        "2) add a <font color='goldenrod'>celerytask.py</font> and <font color='goldenrod'>celeryconfig.py</font> to it\n",
+                                        "3) add <font color='goldenrod'>Dockerfile</font> and <font color='goldenrod'>requirement.txt</font> if you want to build it seperately\n",
+                                        "4) in <font color='goldenrod'>celerytask.py</font> make a new celery instance and choose celeryconfig as a setting file \n",
+                                        "<font color='dodgerblue'>\n",
                                         "    > app = Celery('mytask')\n",
                                         "    \n",
                                         "    > app.config_from_object('celeryconfig')\n",
@@ -55,7 +55,7 @@
                                         "</font>\n",
                                         "\n",
                                         "5) add congifs to the celeryconfig.py\n",
-                                        "<font color='deepskyblue'>\n",
+                                        "<font color='dodgerblue'>\n",
                                         "    > broker_url = 'redis://redis:6379/0'\n",
                                         "    > result_backend = 'redis://redis:6379/0'\n",
                                         "</font>\n",
@@ -110,14 +110,14 @@
                                         "\n",
                                         "passing to queue:\n",
                                         "\n",
-                                        "1) we use <font color='yellow'>-Q <queuename> flag</font> to set a worker to watch a individuaqueue  <font color='yellow'>celery -A <#filename> worker --loglevel=info -Qqueue2</font> in order to pass a task to a spicifiedqueuee this command in celery.py \n",
-                                        "    <font color='deepskyblue'>\n",
+                                        "1) we use <font color='goldenrod'>-Q <queuename> flag</font> to set a worker to watch a individuaqueue  <font color='goldenrod'>celery -A <#filename> worker --loglevel=info -Qqueue2</font> in order to pass a task to a spicifiedqueuee this command in celery.py \n",
+                                        "    <font color='dodgerblue'>\n",
                                         "    >app.conf.task_routes = {'newapp.tasks.task1': {'queue':'queue1'}}\n",
                                         "    \n",
                                         "    >app.conf.task_routes = {'<#task location>': {'queue':'<queuename>'},}\n",
                                         "    </font> \n",
-                                        "3) if there is a independed worker we have to creat a <font color='yellow'>task.py</font> file and write tasks in there and import task using this command\n",
-                                        "    <font color='deepskyblue'>\n",
+                                        "3) if there is a independed worker we have to creat a <font color='goldenrod'>task.py</font> file and write tasks in there and import task using this command\n",
+                                        "    <font color='dodgerblue'>\n",
                                         "    >app.conf.imports = ('newapp.tasks')\n",
                                         "\n",
                                         "    >app.conf.imports = ('<#task location>')\n",
@@ -142,7 +142,7 @@
                                         "1) set priority to a task\n",
                                         "2) set priority to a queue and put task in them based on your priority\n",
                                         "\n",
-                                        "Redis does not support first method and we should use RabitMQ to do that"
+                                        " <font color='goldenrod'>Redis does not support first method </font>and we should use <font color='goldenrod'>RabitMQ </font>to do that"
                               ]
                     },
                     {
@@ -152,14 +152,20 @@
                                         "### set priority to a queue\n",
                                         "\n",
                                         "1) first set multiple queus for worker in docker-compose \n",
-                                        "> celery -A celerytst worker --loglevel=info -Q queue1,queue2,queue3\n",
+                                        "<font color='dodgerblue'>\n",
+                                        "  > celery -A celerytst worker --loglevel=info -Q queue1,queue2,queue3 \n",
+                                        "</font>\n",
+                                        "\n",
                                         "remember that when passing -Q queus are sorted based on their priority meaning queue1 > queue2 > queue3\n",
                                         "2) now set each task to a queue using app.conf.task_routes\n",
-                                        "app.conf.task_routes = {\n",
-                                        "    'newapp.tasks.task1': {'queue':'queue1'}, \n",
-                                        "    'newapp.tasks.task2': {'queue':'queue2'},\n",
-                                        "    'newapp.tasks.task3': {'queue':'queue3'},\n",
-                                        "    }\n",
+                                        "\n",
+                                        " <font color='dodgerblue'>\n",
+                                        "app.conf.task_routes = {<br>\n",
+                                        "    'newapp.tasks.task1': {'queue':'queue1'}, <br>\n",
+                                        "    'newapp.tasks.task2': {'queue':'queue2'}, <br>\n",
+                                        "    'newapp.tasks.task3': {'queue':'queue3'}} <br>\n",
+                                        "    </font>\n",
+                                        "    \n",
                                         "3) now task1 is prioritized on task2 and task2 on task3"
                               ]
                     },
@@ -169,12 +175,19 @@
                               "source": [
                                         "# Task groups\n",
                                         "\n",
-                                        "we use groups to run multiple tasks together in parallel\n",
+                                        "we use groups to run <font color='goldenrod'>multiple tasks in parallel</font>\n",
                                         "1) first we have to make a group out of tasks with this command\n",
+                                        "<font color='dodgerblue'>\n",
                                         "> from celery import group\n",
+                                        "\n",
                                         "> task_group = group(task1.s(), task2.s(),task3.s())\n",
+                                        "</font>\n",
+                                        "\n",
                                         "2) to execute the task group use\n",
+                                        "<font color='dodgerblue'>\n",
                                         "> task_group.apply_async()\n",
+                                        "</font>\n",
+                                        "\n",
                                         "3) now task1,2,3 are executed together\n"
                               ]
                     },
@@ -184,12 +197,18 @@
                               "source": [
                                         "# Task chains\n",
                                         "\n",
-                                        "we use chains to save a sequel between multiple tasks when a task is dependent to another task\n",
+                                        "we use chains to <font color='goldenrod'>save a sequel between multiple tasks</font> when a task is dependent to another task\n",
                                         "1) first we make a chain\n",
+                                        "<font color='dodgerblue'>\n",
                                         "> from celery import chain\n",
                                         "> task_chain = chain(task1.s(), task2.s(),task3.s())\n",
+                                        "</font>\n",
+                                        "\n",
                                         "2) to execute the task group use\n",
+                                        "<font color='dodgerblue'>\n",
                                         "> task_chain.apply_async()\n",
+                                        "</font>\n",
+                                        "\n",
                                         "3) now task1,2,3 are executed in order"
                               ]
                     },
@@ -201,10 +220,22 @@
                                         "\n",
                                         "set a rate limit for a task that manages how many times a task could be executed in a minute \n",
                                         "1) one way is to use it on @shared_task decorator\n",
-                                        "@shared_task(task_rate_limit= '5/m')\n",
+                                        "<font color='dodgerblue'>\n",
+                                        "> @shared_task(task_rate_limit= '5/m')\n",
+                                        "</font>\n",
+                                        "\n",
                                         "2) other way is to use this command in celery.py file\n",
-                                        "app = Celery('proj_name')\n",
-                                        "app.conf.task_default_rate_limit = '5/m'"
+                                        "<font color='dodgerblue'>\n",
+                                        "> app = Celery('proj_name')\n",
+                                        "> app.conf.task_default_rate_limit = '5/m'\n",
+                                        "</font>"
+                              ]
+                    },
+                    {
+                              "cell_type": "markdown",
+                              "metadata": {},
+                              "source": [
+                                        "# RabitMQ"
                               ]
                     }
           ],
