--- a/doc.ipynb
+++ b/doc.ipynb
@@ -235,7 +235,26 @@
                               "cell_type": "markdown",
                               "metadata": {},
                               "source": [
-                                        "# RabitMQ"
+                                        "# RabitMQ\n",
+                                        "\n",
+                                        "1) in order to work with RabbitMQ we have to install pika library\n",
+                                        "> pip install pika\n",
+                                        "2) create a service in docker compose with management tag for image (gives us interface for rabbitmq)\n",
+                                        "3) expose ports 5672 for ramitmq and 15672 for its interface\n",
+                                        "4) add these commands to celery.py\n",
+                                        "> from kombu import Exchange, Queue\n",
+                                        "> app.conf.task_queues = [\n",
+                                        ">    Queue('tasks', Exchange('tasks'), routing_key='tasks',\n",
+                                        ">          queue_arguments={'x-max-priority': 10}),]\n",
+                                        "5) and these command to manage priority\n",
+                                        "> app.conf.task_default_priority = 5\n",
+                                        "> app.conf.worker_prefetch_multiplier = 1 \n",
+                                        "> app.conf.worker_concurrency = 1\n",
+                                        "6) add a task with\n",
+                                        "> @app.task(queue='qeueu1')\n",
+                                        "> def rabit_task():\n",
+                                        ">    return\n",
+                                        "7) change setting.py to use rabbitmq\n"
                               ]
                     }
           ],
