--- a/doc.ipynb
+++ b/doc.ipynb
@@ -247,14 +247,17 @@
                                         ">    Queue('tasks', Exchange('tasks'), routing_key='tasks',\n",
                                         ">          queue_arguments={'x-max-priority': 10}),]\n",
                                         "5) and these command to manage priority\n",
+                                        "> app.conf.task_acks_late = True\n",
+                                        "> app.conf.task_queue_max_priority = 10\n",
                                         "> app.conf.task_default_priority = 5\n",
                                         "> app.conf.worker_prefetch_multiplier = 1 \n",
                                         "> app.conf.worker_concurrency = 1\n",
                                         "6) add a task with\n",
-                                        "> @app.task(queue='qeueu1')\n",
+                                        "> @app.task(queue='tasks')\n",
                                         "> def rabit_task():\n",
                                         ">    return\n",
-                                        "7) change setting.py to use rabbitmq\n"
+                                        "7) change setting.py to use rabbitmq\n",
+                                        "> CELERY_BROKER_URL = os.getenv(\"CELERY_BROKER_URL\", \"amqp://guest:guest@rabbitmq:5672\")\n"
                               ]
                     }
           ],
