--- a/doc.ipynb
+++ b/doc.ipynb
@@ -12,7 +12,7 @@
                               "metadata": {},
                               "source": [
                                         "1) add <font color='goldenrod'>celery.py</font> to the main app and add these lines\n",
-                                        "<font color='dodgerblue'>\n",
+                                        "<font color='steelblue'>\n",
                                         "> from celery import Celery\n",
                                         "\n",
                                         "> os.environ.setdefault(\"DJANGO_SETTINGS_MODULE\", \"celerytst.settings\")\n",
@@ -22,7 +22,7 @@
                                         "> app.autodiscover_tasks()\n",
                                         "</font>\n",
                                         "2) add this to setting.py  \n",
-                                        "<font color='dodgerblue'>\n",
+                                        "<font color='steelblue'>\n",
                                         "> CELERY_BROKER_URL = os.getenv(\"CELERY_BROKER_URL\", \"redis://redis:6379/0\")\n",
                                         "</font>\n",
                                         "3) add <font color='goldenrod'>tasks.py</font> to your app and use <font color='goldenrod'>@shared_task</font> decorator to define it as a task   "
@@ -43,7 +43,7 @@
                                         "2) add a <font color='goldenrod'>celerytask.py</font> and <font color='goldenrod'>celeryconfig.py</font> to it\n",
                                         "3) add <font color='goldenrod'>Dockerfile</font> and <font color='goldenrod'>requirement.txt</font> if you want to build it seperately\n",
                                         "4) in <font color='goldenrod'>celerytask.py</font> make a new celery instance and choose celeryconfig as a setting file \n",
-                                        "<font color='dodgerblue'>\n",
+                                        "<font color='steelblue'>\n",
                                         "    > app = Celery('mytask')\n",
                                         "    \n",
                                         "    > app.config_from_object('celeryconfig')\n",
@@ -55,7 +55,7 @@
                                         "</font>\n",
                                         "\n",
                                         "5) add congifs to the celeryconfig.py\n",
-                                        "<font color='dodgerblue'>\n",
+                                        "<font color='steelblue'>\n",
                                         "    > broker_url = 'redis://redis:6379/0'\n",
                                         "    > result_backend = 'redis://redis:6379/0'\n",
                                         "</font>\n",
@@ -111,13 +111,13 @@
                                         "passing to queue:\n",
                                         "\n",
                                         "1) we use <font color='goldenrod'>-Q <queuename> flag</font> to set a worker to watch a individuaqueue  <font color='goldenrod'>celery -A <#filename> worker --loglevel=info -Qqueue2</font> in order to pass a task to a spicifiedqueuee this command in celery.py \n",
-                                        "    <font color='dodgerblue'>\n",
+                                        "    <font color='steelblue'>\n",
                                         "    >app.conf.task_routes = {'newapp.tasks.task1': {'queue':'queue1'}}\n",
                                         "    \n",
                                         "    >app.conf.task_routes = {'<#task location>': {'queue':'<queuename>'},}\n",
                                         "    </font> \n",
                                         "3) if there is a independed worker we have to creat a <font color='goldenrod'>task.py</font> file and write tasks in there and import task using this command\n",
-                                        "    <font color='dodgerblue'>\n",
+                                        "    <font color='steelblue'>\n",
                                         "    >app.conf.imports = ('newapp.tasks')\n",
                                         "\n",
                                         "    >app.conf.imports = ('<#task location>')\n",
@@ -152,14 +152,14 @@
                                         "### set priority to a queue\n",
                                         "\n",
                                         "1) first set multiple queus for worker in docker-compose \n",
-                                        "<font color='dodgerblue'>\n",
+                                        "<font color='steelblue'>\n",
                                         "  > celery -A celerytst worker --loglevel=info -Q queue1,queue2,queue3 \n",
                                         "</font>\n",
                                         "\n",
                                         "remember that when passing -Q queus are sorted based on their priority meaning queue1 > queue2 > queue3\n",
                                         "2) now set each task to a queue using app.conf.task_routes\n",
                                         "\n",
-                                        " <font color='dodgerblue'>\n",
+                                        " <font color='steelblue'>\n",
                                         "app.conf.task_routes = {<br>\n",
                                         "    'newapp.tasks.task1': {'queue':'queue1'}, <br>\n",
                                         "    'newapp.tasks.task2': {'queue':'queue2'}, <br>\n",
@@ -177,14 +177,14 @@
                                         "\n",
                                         "we use groups to run <font color='goldenrod'>multiple tasks in parallel</font>\n",
                                         "1) first we have to make a group out of tasks with this command\n",
-                                        "<font color='dodgerblue'>\n",
+                                        "<font color='steelblue'>\n",
                                         "> from celery import group\n",
                                         "\n",
                                         "> task_group = group(task1.s(), task2.s(),task3.s())\n",
                                         "</font>\n",
                                         "\n",
                                         "2) to execute the task group use\n",
-                                        "<font color='dodgerblue'>\n",
+                                        "<font color='steelblue'>\n",
                                         "> task_group.apply_async()\n",
                                         "</font>\n",
                                         "\n",
@@ -199,13 +199,13 @@
                                         "\n",
                                         "we use chains to <font color='goldenrod'>save a sequel between multiple tasks</font> when a task is dependent to another task\n",
                                         "1) first we make a chain\n",
-                                        "<font color='dodgerblue'>\n",
+                                        "<font color='steelblue'>\n",
                                         "> from celery import chain\n",
                                         "> task_chain = chain(task1.s(), task2.s(),task3.s())\n",
                                         "</font>\n",
                                         "\n",
                                         "2) to execute the task group use\n",
-                                        "<font color='dodgerblue'>\n",
+                                        "<font color='steelblue'>\n",
                                         "> task_chain.apply_async()\n",
                                         "</font>\n",
                                         "\n",
@@ -220,12 +220,12 @@
                                         "\n",
                                         "set a rate limit for a task that manages how many times a task could be executed in a minute \n",
                                         "1) one way is to use it on @shared_task decorator\n",
-                                        "<font color='dodgerblue'>\n",
+                                        "<font color='steelblue'>\n",
                                         "> @shared_task(task_rate_limit= '5/m')\n",
                                         "</font>\n",
                                         "\n",
                                         "2) other way is to use this command in celery.py file\n",
-                                        "<font color='dodgerblue'>\n",
+                                        "<font color='steelblue'>\n",
                                         "> app = Celery('proj_name')\n",
                                         "> app.conf.task_default_rate_limit = '5/m'\n",
                                         "</font>"
@@ -237,27 +237,60 @@
                               "source": [
                                         "# RabitMQ\n",
                                         "\n",
-                                        "1) in order to work with RabbitMQ we have to install pika library\n",
+                                        "1) in order to work with RabbitMQ we have to install <font color='goldenrod'>pika</font> library\n",
+                                        "<font color='steelblue'>\n",
                                         "> pip install pika\n",
-                                        "2) create a service in docker compose with management tag for image (gives us interface for rabbitmq)\n",
-                                        "3) expose ports 5672 for ramitmq and 15672 for its interface\n",
-                                        "4) add these commands to celery.py\n",
+                                        "</font>\n",
+                                        "\n",
+                                        "2) create a service in docker compose with <font color='goldenrod'>management</font> tag for image (gives us interface for rabbitmq)\n",
+                                        "3) expose ports <font color='goldenrod'>5672</font> for ramitmq and <font color='goldenrod'>15672</font> for its interface\n",
+                                        "4) add these commands to celery.py <font color='goldenrod'>tasks</font> is the name of the queue we are using\n",
+                                        "<font color='steelblue'>\n",
                                         "> from kombu import Exchange, Queue\n",
-                                        "> app.conf.task_queues = [\n",
-                                        ">    Queue('tasks', Exchange('tasks'), routing_key='tasks',\n",
-                                        ">          queue_arguments={'x-max-priority': 10}),]\n",
-                                        "5) and these command to manage priority\n",
+                                        "\n",
+                                        "> app.conf.task_queues = [Queue('tasks', Exchange('tasks'), routing_key='tasks',queue_arguments={'x-max-priority': 10}),]\n",
+                                        "</font>\n",
+                                        "\n",
+                                        "5) and these command to manage the prioritis\n",
+                                        "<font color='steelblue'>\n",
+                                        "\n",
                                         "> app.conf.task_acks_late = True\n",
+                                        "\n",
                                         "> app.conf.task_queue_max_priority = 10\n",
+                                        "\n",
                                         "> app.conf.task_default_priority = 5\n",
+                                        "\n",
                                         "> app.conf.worker_prefetch_multiplier = 1 \n",
+                                        "\n",
                                         "> app.conf.worker_concurrency = 1\n",
+                                        "\n",
+                                        "</font>\n",
+                                        "\n",
                                         "6) add a task with\n",
+                                        "<font color='steelblue'>\n",
+                                        "\n",
                                         "> @app.task(queue='tasks')\n",
-                                        "> def rabit_task():\n",
+                                        "\n",
+                                        "> def task1():\n",
+                                        "\n",
                                         ">    return\n",
+                                        "</font>\n",
+                                        "\n",
                                         "7) change setting.py to use rabbitmq\n",
-                                        "> CELERY_BROKER_URL = os.getenv(\"CELERY_BROKER_URL\", \"amqp://guest:guest@rabbitmq:5672\")\n"
+                                        "<font color='steelblue'>\n",
+                                        "\n",
+                                        "> CELERY_BROKER_URL = os.getenv(\"CELERY_BROKER_URL\", \"amqp://guest:guest@rabbitmq:5672\")\n",
+                                        "</font>\n",
+                                        "\n",
+                                        "8) call a task in django container termainal and set its priority\n",
+                                        "<font color='steelblue'>\n",
+                                        "\n",
+                                        "> task1.apply_async(priority=4)\n",
+                                        "\n",
+                                        "> task2.apply_async(priority=9)\n",
+                                        "</font>\n",
+                                        "\n",
+                                        "9) task2 will be executed before task1\n"
                               ]
                     }
           ],
