--- a/doc.ipynb
+++ b/doc.ipynb
@@ -292,6 +292,46 @@
                                         "\n",
                                         "9) task2 will be executed before task1\n"
                               ]
+                    },
+                    {
+                              "cell_type": "markdown",
+                              "metadata": {},
+                              "source": [
+                                        "# Tasks argument\n",
+                                        "\n",
+                                        "1) we can pass both positional and key argument to the task by using this command\n",
+                                        "\n",
+                                        "<font color='steelblue'>\n",
+                                        "> task1.apply_async(args=[arg1,arg2], kwargs={key1:val1, key2:val2})\n",
+                                        "</font>\n",
+                                        "\n",
+                                        "2) and in the task function define args and kwargs as\n",
+                                        "\n",
+                                        "<font color='steelblue'>\n",
+                                        "> @app.task(queue='tasks')<br>\n",
+                                        "> def task1(a, b, message=None):<br>\n",
+                                        ">   return f\"{message} : {a+b}\"<br>\n",
+                                        "</font>\n",
+                                        "\n",
+                                        "3) it will return the result in celery terminal but if you want to see it in django terminal use\n",
+                                        "\n",
+                                        "<font color='steelblue'>\n",
+                                        "> res = task1.apply_async(args=[arg1,arg2], kwargs={key1:val1, key2:val2})<br>\n",
+                                        "> print(res.get())\n",
+                                        "</font>\n",
+                                        "\n",
+                                        "### Async results\n",
+                                        "\n",
+                                        "there are many functions that help us find a task status in django (we saved the task as res variable): <br><br>\n",
+                                        "<font color='goldenrod'>res.isCompleted():</font>   ---------->   shows wheater a task is still runing or not <br>\n",
+                                        "<font color='goldenrod'>res.ready():</font>  ---------->   shows if the task was recived by celery or not <br>\n",
+                                        "<font color='goldenrod'>res.isSuccessful():</font>  ---------->   returns true if the task was executed successfully <br>\n",
+                                        "<font color='goldenrod'>res.get():</font>  ---------->   takes the output of the task from celery  <br>\n",
+                                        "<font color='goldenrod'>res.getResult():</font>  ---------->   takes output if the task was successful <br>\n",
+                                        "<font color='goldenrod'>res.getException():</font>  ---------->   return any exceptions along the way <br>\n",
+                                        "\n",
+                                        "\n"
+                              ]
                     }
           ],
           "metadata": {
